// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarItem renders the expected snapshot with manifest page 1`] = `
<li
  className="sidebar-item"
>
  <Localized
    attrs={
      Object {
        "alt": true,
        "title": true,
      }
    }
    id="sidebar-item-manifest"
  >
    <img
      className="sidebar-item__icon"
      src="chrome://devtools/skin/images/application-manifest.svg"
    />
  </Localized>
  <Localized
    attrs={
      Object {
        "title": true,
      }
    }
    id="sidebar-item-manifest"
  >
    <span
      className="devtools-ellipsis-text"
    />
  </Localized>
</li>
`;

exports[`SidebarItem renders the expected snapshot with service-workers page 1`] = `
<li
  className="sidebar-item"
>
  <Localized
    attrs={
      Object {
        "alt": true,
        "title": true,
      }
    }
    id="sidebar-item-service-workers"
  >
    <img
      className="sidebar-item__icon"
      src="chrome://devtools/skin/images/debugging-workers.svg"
    />
  </Localized>
  <Localized
    attrs={
      Object {
        "title": true,
      }
    }
    id="sidebar-item-service-workers"
  >
    <span
      className="devtools-ellipsis-text"
    />
  </Localized>
</li>
`;
